Fixed spacing and positioning issues with footer

--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -13,7 +13,7 @@ body {
 }
 
 .wrapper {
-  padding-bottom: 104.6px;
+  min-height: calc(100vh - 104.6px);
 }
 
 .navbar {
@@ -109,13 +109,6 @@ h2 {
   width: 200px;
   display: block;
   margin: 0 auto;
-}
-
-footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 104.6px;
 }
 
 @media (max-width: 800px) {
